fix overflow

--- a/css/formmap.css
+++ b/css/formmap.css
@@ -35,10 +35,16 @@
     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
   }
   
-@media screen and (max-width:600px) {
+@media only screen and (max-width:725px) {
   .navigation {
     height: 85px;
   }
+}
+
+@media (min-width:320px) and (max-width:425px) {
+  .overflow {
+  overflow-x: hidden;
+}
 }
 
 .button-menu {
